3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugin/plugin_python.c: Use #define constants.
plugin/include/plugin_python.h, plugin/plugin_python.c,
plugin_animator/plugin_animator.c, server/plugins.c: General cleanup - merge
   duplicate code, remove debugging code, rename variables, rename C function
   names to match the Python function name, use hook functions where
   appropriate.
include/sproto.h, plugin/plugin_python.c, server/plugins.c, server/shop.c:
   Use uint64 type for variables holding money. Use Python long integers to
   pass these variables to/from the Python plugin.
Andreas Kirschbaum 2005-01-07

plugin/plugin_python.c: Check values passed in from the Python code; generate
   proper Python exceptions for invalid values.
plugin/plugin_python.c, plugin_animator/plugin_animator.c: Make sure all
   fields on the stack are initialized. Prevent stack overflow: check was one
   off, causing a buffer overflow. Decrement stack pointer in error case.
Andreas Kirschbaum 2005-01-06.

common/regexp.c: Fixed couple flaws in regexp handling.  First, there was an
   off by one error in the handling of matches (if the match was for example
   eureca, player could just say eurec, and it would treat that as a valid
   match).  Second case was that the regular expression logic would not
   try comparing the rest of the passed in string after a partial match -
   In the eureca case above, if the passed in string was 'where is eureca',
   after matching the first e (in where), it then fails to match the
   next letter and would give up.  It now tries comparing the rest of
   the passed in string with the regex (so after that failure, it 