@@ -17,6 +17,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugin/plugin_python.c: Fix a buffer overflow in CFPython.RegisterCommand():
+   allocated memory was not sufficient to hold the trailing '\0'.
 plugin/plugin_python.c: Use #define constants.
 plugin/include/plugin_python.h, plugin/plugin_python.c,
 plugin_animator/plugin_animator.c, server/plugins.c: General cleanup - merge
